Fixed issue where the footer would overlap the bottom track when in full-screen mode on desktop.

--- a/app/assets/styles/modules/_main-content.css
+++ b/app/assets/styles/modules/_main-content.css
@@ -9,5 +9,6 @@
 
     &.full-width {
         width: 100%;
+        margin-bottom: 4rem;
     }
 }
