--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -999,6 +999,7 @@ a {
 
 .main-content.full-width {
         width: 100%;
+        margin-bottom: 4rem;
     }
 
 .control {
